Error message on trying to import COLLADA triangle strips is wrong #41528

Closed
opened 2014-08-21 17:14:49 +02:00 by Maarten Gribnau · 6 comments

System Information
MacOSX 10.9.4 on PowerBook with NVIDIA GeForce GT 750M 2048 MB

Blender Version
Broken: NVIDIA GeForce GT 750M 2048 MB
Worked: (optional)

Short description of error
I am writing Collada files with (as defined in http://www.khronos.org/files/collada_spec_1_5.pdf) and importing these in Blender. The console shows an error message "Primitive type TRIANGLE_FANS is not supported." but should show "Primitive type TRIANGLE_STRIPS is not supported."

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
I think steps to reproduce are not necessary. The source code shows there is an error in the switch:

static const char *bc_primTypeToStr(COLLADAFW::MeshPrimitive::PrimitiveType type)
{
	switch (type) {
		case COLLADAFW::MeshPrimitive::LINES:
			return "LINES";
		case COLLADAFW::MeshPrimitive::LINE_STRIPS:
			return "LINESTRIPS";
		case COLLADAFW::MeshPrimitive::POLYGONS:
			return "POLYGONS";
		case COLLADAFW::MeshPrimitive::POLYLIST:
			return "POLYLIST";
		case COLLADAFW::MeshPrimitive::TRIANGLES:
			return "TRIANGLES";
		case COLLADAFW::MeshPrimitive::TRIANGLE_FANS:
			return "TRIANGLE_FANS";
		case COLLADAFW::MeshPrimitive::TRIANGLE_STRIPS:
			return "TRIANGLE_FANS";
		case COLLADAFW::MeshPrimitive::POINTS:
			return "POINTS";
		case COLLADAFW::MeshPrimitive::UNDEFINED_PRIMITIVE_TYPE:
			return "UNDEFINED_PRIMITIVE_TYPE";
	}
	return "UNKNOWN";
}
**System Information** MacOSX 10.9.4 on PowerBook with NVIDIA GeForce GT 750M 2048 MB **Blender Version** Broken: NVIDIA GeForce GT 750M 2048 MB Worked: (optional) **Short description of error** I am writing Collada files with <tristrips> (as defined in http://www.khronos.org/files/collada_spec_1_5.pdf) and importing these in Blender. The console shows an error message "Primitive type TRIANGLE_FANS is not supported." but should show "Primitive type TRIANGLE_STRIPS is not supported." **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I think steps to reproduce are not necessary. The source code shows there is an error in the switch: ``` static const char *bc_primTypeToStr(COLLADAFW::MeshPrimitive::PrimitiveType type) { switch (type) { case COLLADAFW::MeshPrimitive::LINES: return "LINES"; case COLLADAFW::MeshPrimitive::LINE_STRIPS: return "LINESTRIPS"; case COLLADAFW::MeshPrimitive::POLYGONS: return "POLYGONS"; case COLLADAFW::MeshPrimitive::POLYLIST: return "POLYLIST"; case COLLADAFW::MeshPrimitive::TRIANGLES: return "TRIANGLES"; case COLLADAFW::MeshPrimitive::TRIANGLE_FANS: return "TRIANGLE_FANS"; case COLLADAFW::MeshPrimitive::TRIANGLE_STRIPS: return "TRIANGLE_FANS"; case COLLADAFW::MeshPrimitive::POINTS: return "POINTS"; case COLLADAFW::MeshPrimitive::UNDEFINED_PRIMITIVE_TYPE: return "UNDEFINED_PRIMITIVE_TYPE"; } return "UNKNOWN"; } ```

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Maarten-Gribnau

Added subscriber: @Maarten-Gribnau

This issue was referenced by 8bb318bf90

This issue was referenced by 8bb318bf90ad564f2e875249b46a8307f73db9f0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8bb318bf90.

Closed by commit 8bb318bf90.

This issue was referenced by f86ae7f348f9416607e73bbd8530f3bbbbe0536e

This issue was referenced by f86ae7f348f9416607e73bbd8530f3bbbbe0536e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41528
No description provided.