Fix T41528: Error message on trying to import COLLADA triangle strips is wrong

Thanks to Maarten Gribnau for the patch.